--- a/programa.html
+++ b/programa.html
@@ -55,8 +55,9 @@
   <section class="">
   <div class="container my-5"> <div class="row p-4 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
     <div class="col-lg-6 p-3 p-lg-5 pt-lg-3">
-    <h3 class="display-4 fw-bold lh-1 text-body-emphasis">22 octubre 2025 </h3> 
-    <h4>¡Ven a conocer el programa!</h4>
+    <h3 class="display-4 fw-bold lh-1 text-body-emphasis">22 octubre 2025</h3>
+    <h4 class="text-black">PRESENTACIÓN DEL PROGRAMA</h4> 
+    <h5>¡Ven a conocerlo!</h5>
     <p class="lead">presencial y online</p>
     <div class="d-flex">    
         <i class="fa-solid fa-location-dot fs-2"></i>
@@ -364,3 +365,4 @@
 </body>
 
 </html>
+
