--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   </section>
 
   <footer>
-    <p class="mb-0">&copy; 2025 CCOO - #CambiarLasCosas</p>
+    <p class="mb-0">&copy; 2025 comite ICEX CCOO - #CambiarLasCosas</p>
   </footer>
 <!--
   <script>
@@ -185,3 +185,4 @@ document.addEventListener("DOMContentLoaded", function() {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
