--- a/programa.html
+++ b/programa.html
@@ -78,7 +78,7 @@
 
 <section id="el-programa" class="container">
   <h2 class="text-center mb-5">El Programa</h2>
-  <h4 class="text-center mb-5">Puedes descargarlo <a href="programa_ccoo_icex.pdf" class="text-decoration-none text-reset no-hover">aquí</a> </h4> 
+  <h4 class="text-center mb-5">Puedes descargarlo <a href="programa_ccoo_icex.pdf" class="text-dark-emphasis text-decoration-none text-reset no-hover">aquí</a> </h4> 
 
   <!-- CAMBIO DE SEDE -->
   <div class="program-item d-flex flex-column flex-md-row justify-content-start align-items-center text-start p-3 mb-4"
@@ -358,11 +358,12 @@
 <!-- fin programa -->
 
   <footer>
-    <p class="mb-0">&copy; 2025 CCOO - #CambiarLasCosas</p>
+    <p class="mb-0">&copy; 2025 comite ICEX CCOO - #CambiarLasCosas</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
 
