--- a/quienes.html
+++ b/quienes.html
@@ -288,10 +288,11 @@ beneficien a todos.</p>
   </section>
 
   <footer>
-    <p class="mb-0">&copy; 2025 CCOO - #CambiarLasCosas</p>
+    <p class="mb-0">&copy; 2025 COMITÉ ICEX CCOO - #CambiarLasCosas</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
