--- a/programa.html
+++ b/programa.html
@@ -358,12 +358,13 @@
 <!-- fin programa -->
 
   <footer>
-    <p class="mb-0">&copy; 2025 comite ICEX CCOO - #CambiarLasCosas</p>
+    <p class="mb-0">&copy; 2025 COMITÉ ICEX CCOO - #CambiarLasCosas</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
 
 
