--- a/programa.html
+++ b/programa.html
@@ -76,7 +76,12 @@
 
 <section id="el-programa" class="container">
   <h2 class="text-center mb-5">El Programa</h2>
-  <h4 class="text-center mb-5">Puedes descargarlo <a href="programa_ccoo_icex.pdf" class="text-dark-emphasis text-decoration-none text-reset no-hover">aquí</a> </h4> 
+  <h4 class="text-center mb-5">Puedes descargarlo <a href="programa_ccoo_icex.pdf" class="text-dark-emphasis text-decoration-none text-reset no-hover" target="_blank">aquí</a> </h4>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+      
+
 
   <!-- CAMBIO DE SEDE -->
   <div class="program-item d-flex flex-column flex-md-row justify-content-start align-items-center text-start p-3 mb-4"
@@ -179,7 +184,8 @@
       </div>
     </div>
   </div>
-
+</div>
+<div class="col">
   <!-- CARRERA PROFESIONAL -->
   <div class="program-item d-flex flex-column flex-md-row justify-content-start align-items-center text-start p-3 mb-4"
        data-bs-toggle="modal" data-bs-target="#modalCarrera">
@@ -282,7 +288,8 @@
       </div>
     </div>
   </div>
-
+</div>
+<div class="col">
   <!-- FORMACIÓN -->
   <div class="program-item d-flex flex-column flex-md-row justify-content-start align-items-center text-start p-3 mb-4"
        data-bs-toggle="modal" data-bs-target="#modalFormacion">
@@ -349,7 +356,9 @@
       </div>
     </div>
   </div>
-
+</div>
+</div>
+</div>
 </section>
 
 
