--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6">
         <h2>El poder de luchar por lo que vale la pena</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac bibendum felis. Aenean dapibus erat id nunc dictum placerat.</p>
+        <p>Luchar por lo que vale la pena significa no conformarse. Significa exigir condiciones justas, defender nuestros derechos, y trabajar por un entorno más humano, más equitativo y más solidario. Y ese poder está en tus manos.</p>
+        <p>Votar en estas elecciones es dar un paso hacia adelante. Es decir “yo también quiero ser parte del cambio”. Porque cuando luchamos juntos, lo que vale la pena se convierte en lo que conseguimos.
+        </p>
       </div>
       <div class="col-md-6 text-center">
         <img src="img/punos.png" class="img-fluid rounded shadow" alt="Imagen">
@@ -114,7 +116,9 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <h2>El poder de unirnos para defender lo común</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Integer imperdiet ipsum id lectus porttitor, vel cursus arcu commodo.</p>
+        <p>En el tiempo que corre, donde lo individual parece imponerse, unirnos es un acto de resistencia. Porque lo que compartimos —nuestros derechos, nuestras condiciones laborales, nuestra salud, nuestro tiempo— es lo que realmente nos sostiene como colectivo.</p>
+        <p>Cuando nos organizamos, cuando votamos, cuando participamos, estamos diciendo que no estamos solos. Que creemos en el poder de la solidaridad, en el valor de cuidar lo que es de todos y todas. Porque lo común no se defiende desde el aislamiento, sino desde la unión.
+        </p>
       </div>
       <div class="col-md-6 text-center">
         <img src="img/manos.png" class="img-fluid rounded shadow" alt="Imagen">
@@ -126,7 +130,10 @@
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6">
         <h2>El poder de apoyarnos y superar dificultades</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget lorem nec nunc tincidunt laoreet at ut nulla.</p>
+        <p>Apoyarnos es saber que no estamos solos ante los retos, que juntos podemos encontrar soluciones, que la unión nos da fuerza. 
+        </p>
+        <p>Superar dificultades no es solo resistir. Es avanzar, transformar, mejorar. Y eso solo se logra con organización, con participación y con compromiso colectivo.
+        </p>
       </div>
       <div class="col-md-6 text-center">
         <img src="img/manos.png" class="img-fluid rounded shadow" alt="Imagen">
