--- a/quienes.html
+++ b/quienes.html
@@ -122,7 +122,7 @@
       <!-- CARD 4 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidata+4" class="card-img-top" alt="María Sánchez San Pablo">
+          <img src="img/maria.png" class="card-img-top" alt="María Sánchez San Pablo">
           <div class="card-body">
             <h6 class="candidate-name mb-1">María Sánchez San Pablo</h6>
             <p class="candidate-role"><strong>Candidata</strong></p>
@@ -166,7 +166,7 @@
       <!-- CARD 8 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidata+8" class="card-img-top" alt="Monika Mikos">
+          <img src="img/MonicaM.jpg" class="card-img-top" alt="Monika Mikos">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Monika Mikos</h6>
             <p class="candidate-role"><strong>Candidata</strong></p>
@@ -298,7 +298,7 @@
       <!-- CARD 20 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidato+20" class="card-img-top" alt="Roberto C. Salgado Carmona">
+          <img src="img/robertoSalgado.jpg" class="card-img-top" alt="Roberto C. Salgado Carmona">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Roberto C. Salgado Carmona</h6>
             <p class="candidate-role"><strong>Candidato</strong></p>
