--- a/quienes.html
+++ b/quienes.html
@@ -298,7 +298,7 @@
       <!-- CARD 20 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="img/robertoSalgado.jpg" class="card-img-top" alt="Roberto C. Salgado Carmona">
+          <img src="img/robertoSalgado.png" class="card-img-top" alt="Roberto C. Salgado Carmona">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Roberto C. Salgado Carmona</h6>
             <p class="candidate-role"><strong>Candidato</strong></p>
