--- a/programa.html
+++ b/programa.html
@@ -61,7 +61,7 @@
         <i class="fa-solid fa-location-dot fs-2"></i>
         <div>
         <p class="ms-2">Sala Santiago de Chile</p>
-        <p class="ms-2">9:00 - 12:00 h</p>
+        <p class="ms-2">11:00 h</p>
       </div>
     </div>
     </div>
