--- a/programa.html
+++ b/programa.html
@@ -259,7 +259,7 @@
       <div class="program-item h-100 p-3 border rounded-3 shadow-sm d-flex flex-column justify-content-start" data-bs-toggle="modal" data-bs-target="#modalPlantilla">
         <i class="fa-solid fa-people-group fs-2 text-danger mb-2"></i>
         <h3 class="h5">Plantilla</h3>
-        <p>Mejores condiciones laborales y estabilidad profesional.</p>
+        <p>Elaboración de una Relación de Puestos de Trabajo.</p>
       </div>
     </div>
 <!-- MODAL PLANTILLA -->
