--- a/quienes.html
+++ b/quienes.html
@@ -144,7 +144,7 @@
       <!-- CARD 6 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="img/VimeHernandezNatalia.jpg" class="card-img-top" alt="Natalia Vime Hernández-Sito">
+          <img src="img/vimeNatalia.jpg" class="card-img-top" alt="Natalia Vime Hernández-Sito">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Natalia Vime Hernández-Sito</h6>
             <p class="candidate-role"><strong>Candidata</strong></p>
@@ -243,7 +243,7 @@
       <!-- CARD 15 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidato+15" class="card-img-top" alt="Rodrigo García Fernández">
+          <img src="img/rodrigoGarcia.jpg" class="card-img-top" alt="Rodrigo García Fernández">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Rodrigo García Fernández</h6>
             <p class="candidate-role"><strong>Candidato</strong></p>
@@ -276,7 +276,7 @@
       <!-- CARD 18 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidato+18" class="card-img-top" alt="Daniel López Sánchez">
+          <img src="img/danieLopez.jpg" class="card-img-top" alt="Daniel López Sánchez">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Daniel López Sánchez</h6>
             <p class="candidate-role"><strong>Candidato</strong></p>
@@ -319,6 +319,7 @@
 </body>
 
 </html>
+
 
 
 
