--- a/programa.html
+++ b/programa.html
@@ -88,7 +88,16 @@
       El trabajo de los representantes que elijas va a ir más allá de negociar un posible Convenio o acuerdos coyunturales. Su labor diaria implica el amparo, la defensa y asesoramiento en tus derechos laborales; la supervisión de la legislación laboral vigente y de las normativas en materia de seguridad y salud en el trabajo, así como el seguimiento de las medidas o cambios que afectan a las plantillas y la intervención en la resolución de conflictos.
     </p>
     <p>
-      Las personas que conformamos la candidatura de CCOO os garantizamos <strong>dedicación y transparencia</strong> en la comunicación con toda la plantilla. Nos mueve un <strong>afán constructivo y dialogante</strong> orientado a avanzar en el reconocimiento de nuestros derechos y en la mejora de nuestras condiciones laborales y salariales.
+      Las personas que conformamos la candidatura de CCOO os garantizamos <strong>dedicación y transparencia</strong> en la comunicación con toda la plantilla. Nos mueve un <strong>afán constructivo y dialogante</strong> orientado a avanzar en el reconocimiento de nuestros derechos y en la mejora de nuestras condiciones laborales y salariales. Nuestro talante negociador será firme, porque todos sabemos que, si no se reclaman los derechos, éstos se acaban perdiendo. 
+    </p>
+    <p>
+      Somos un equipo comprometido con la <strong>transparencia y el trabajo responsable</strong> y apostamos por la unidad y la participación para alcanzar acuerdos que beneficien a todos.
+    </p>
+    <p>
+      <strong>Nuestra fuerza reside en todas las personas que componen la plantilla.</strong> Vuestro voto nos dará fuerza y nos respaldará en todas las negociaciones que llevemos a cabo.
+    </p>
+    <p>
+      Os animamos a participar en las próximas Elecciones Sindicales y apostar por la candidatura más comprometida, la de CCOO.
     </p>
   </div>
 
@@ -121,15 +130,9 @@
           <li>El incremento en el coste asociado al cambio de ubicación, tanto en términos económicos como en el tiempo adicional requerido para realizar el desplazamiento.</li>
         </ul>
 
-        <p>También analizaremos las dificultades en el acceso al nuevo centro de trabajo, los medios de transporte cercanos y la afluencia de paso de los mismos (poca afluencia de trenes, escasez de autobuses, dificultad de conexión al metro ligero), para evaluar el impacto real en la plantilla.</p>
+        <p>También analizar las dificultades en el acceso al nuevo centro de trabajo, los medios de transporte cercanos y la afluencia de paso de los mismos (poca afluencia de trenes, escasez de autobuses, dificultad de conexión al metro ligero),  para evaluar el impacto real en la plantilla.</p>
 
-        <p>En función de todas las variables, se podrán establecer posibles medidas que minimicen el impacto del traslado en todas las trabajadoras y trabajadores, tales como:</p>
-        <ul>
-          <li>Asumir por parte de ICEX el coste del transporte (abono transporte anual).</li>
-          <li>Disponer de servicio de lanzaderas desde núcleos claves en el transporte (Atocha y Chamartín).</li>
-          <li>Medidas de flexibilidad horaria.</li>
-        </ul>
-
+        <p>Y en función de todas las variables que intervienen poder establecer posibles <strong>medidas que minimicen el impacto del traslado</strong> en todas las trabajadoras y trabajadores: asumir por parte de ICEX el coste del transporte (abono transporte anual), disponer de servicio de lanzaderas desde núcleos claves en el transporte (Atocha y Chamartín), medidas de flexibilidad horaria, etc.</p>
         <p>Estaremos atentos a que, en la nueva sede, el personal tenga <strong>unas condiciones dignas de trabajo</strong>, respetando los derechos tanto del que opte al teletrabajo, como del que acuda de forma presencial.</p>
       </div>
       <div class="modal-footer border-0">
@@ -142,7 +145,7 @@
     <div class="col-12 col-md-4">
       <div class="program-item h-100 p-3 border rounded-3 shadow-sm d-flex flex-column justify-content-start" data-bs-toggle="modal" data-bs-target="#modalRetribuciones">
         <i class="fa-solid fa-hand-holding-dollar fs-2 text-danger mb-2"></i>
-        <h3 class="h5">Retribuciones</h3>
+        <h3 class="h5">Retribución</h3>
         <p>Revisión de complementos y recuperación del nivel adquisitivo.</p>
       </div>
     </div>
@@ -380,6 +383,7 @@
 </body>
 
 </html>
+
 
 
 
