--- a/programa.html
+++ b/programa.html
@@ -218,9 +218,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>La Acción Social son las ayudas que recibe el personal para cubrir necesidades de bienestar social, como la financiación de problemas de salud, discapacidades, etc. Es la parte más amable y solidaria del ICEX, pero no deja de ser parte del salario.</p>
-        <p>Desde 2010 ha sufrido grandes recortes (75%) de los que no se ha recuperado. En un contexto económico como el actual, en el que los salarios están estancados y el coste de la vida está en continuo aumento, trabajaremos para incrementar la dotación de fondos de Acción Social hasta recuperar la cantidad existente en 2010.</p>
-        <p>Con la recuperación de los fondos de acción social, se podrían implementar otros servicios como ayudas directas a especialidades médicas como fisioterapia, con precios concertados. La revisión y análisis del actual programa de Acción Social será fundamental para la racionalización y/o ampliación de futuras coberturas.</p>
+        <p>La Acción Social son las ayudas que recibe el personal para cubrir necesidades de bienestar social, como la financiación de problemas de salud, discapacidades, etc. Es la parte más amable y solidaria del ICEX, pero no deja de ser parte del salario. Desde 2010 h la acción social a sufrido grandes recortes (75%) de los que no se ha recuperado.</p>
+        <p>En un contexto económico como el actual, en el que los salarios están estancados y el coste de la vida está en continuo aumento, trabajaremos para tratar de incrementar de la dotación de fondos de Acción Social hasta recuperar la cantidad existente en 2010.</p>
+        <p>Con la recuperación de los fondos de acción social, se podría implementar otros servicios como las ayudas directas a otras especialidades médicas como fisioterapia, con precios concertados. La revisión y análisis del actual programa de Acción Social será fundamental de cara a la racionalización y/o ampliación de futuras coberturas.</p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -247,9 +247,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>El Plan Integral de Teletrabajo de ICEX establece el derecho a la desconexión digital y vida privada. Sin embargo, hemos visto en numerosas ocasiones como este derecho no se respeta y se envían correos, mensajes y llamadas fuera del horario laboral. <strong>Abogaremos por una desconexión digital real</strong> para proteger el tiempo de descanso, la intimidad y la conciliación.</p>
-        <p>Si bien en ICEX existen acuerdos de conciliación, en los últimos años se han endurecido las condiciones para disfrutarlos. Por ejemplo, el Acuerdo de Bolsa de horas de Conciliación se deteriora y con el teletrabajo se exige presencialidad, generando una cultura de desconfianza.</p>
-        <p>Mediante negociación colectiva, trataremos de mejorar la legislación en permisos retribuidos, adaptación de jornada y reducción de jornada.</p>
+        <p>El Plan Integral de Teletrabajo de ICEX establece el derecho a la desconexión digital y vida privada. Sin embargo, hemos visto en numerosas ocasiones como este derecho no se respeta y se envían correos, se reciben mensajes y llamadas telefónicas fuera del horario laboral. También es frecuente que el personal tenga que conectarse durante sus vacaciones o días de permiso para atender a reuniones o asuntos urgentes.<strong>Abogaremos por una desconexión digital real</strong> para proteger el tiempo de descanso, la intimidad y la conciliación.</p>
+        <p>Si bien es cierto que en ICEX contamos con diversos acuerdos para la conciliación de la vida personal, familiar y laboral, en los últimos años se han ido endureciendo las condiciones para poder disfrutarlos. Así, hemos visto como el Acuerdo de Bolsa de horas de Conciliación se ha ido deteriorando cada año. Además, con el teletrabajo se exige la presencialidad el día que se haga uso de las horas de la bolsa de conciliación, lo que contraviene el propio acuerdo de Bolsas de Hora de Conciliación y genera una cultura de la desconfianza.</p>
+        <p>Mediante la negociación colectiva trataremos de mejorar en la legislación materia de permisos retribuidos, adaptación de jornada, reducción de jornada, etc.</p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -276,8 +276,19 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>Elaboración de una Relación de Puestos de Trabajo (RPT) que estructura la organización, define funciones y requisitos de cada puesto, y proporciona claridad sobre condiciones laborales y salariales. <strong>Facilita la gestión del talento y las oportunidades de desarrollo profesional</strong>.</p>
-        <p>Establecer criterios objetivos para la descripción, valoración y clasificación de los puestos garantiza un trato justo y equitativo y ayuda al dimensionamiento de la plantilla de ICEX.</p>
+        <p>Elaboración de una <strong>Relación de Puestos de Trabajo (RPT),</strong>que es necesaria porque estructura la organización, define las funciones y requisitos de cada puesto para garantizar la eficiencia y equidad, facilita la gestión del talento y las oportunidades de desarrollo profesional para los empleados, y proporciona claridad sobre las condiciones laborales y salariales. También implica una mayor transparencia al detallar la estructura del ICEX y facilita adaptar la oferta de empleo público a las necesidades reales de los servicios.</p>
+        <p>Supone una mejora de la eficiencia, al definir las necesidades de los servicios y los requisitos para el desempeño de cada puesto, optimizando la gestión de los recursos. Además, facilita la identificación de las habilidades y competencias necesarias para cada puesto, lo cual es fundamental para la gestión del talento y la evaluación del desempeño.</p>
+        <p>Al establecer criterios objetivos para la descripción, valoración y clasificación de los puestos, se garantiza un trato justo y equitativo para todos los empleados, se lograría poner límite a la disparidad de requisitos en las convocatorias de plazas, creando un sistema de evaluación del desempeño más justo y ajustado al desempeño laboral del puesto y la categoría profesional. 
+Disponer de una RPT ayudaría al dimensionamiento de los puestos de trabajo y de la plantilla de ICEX.
+</p>
+        <p>
+          Necesitamos un <strong>proyecto de digitalización de los procesos</strong>en ICEX realista, adaptado a los recursos existentes y que dé servicio a los trabajadores y también a los clientes.
+        </p>
+        <p>
+          ICEX afronta en estos momentos un cambio en la estructura de la plantilla, con un futuro a medio y largo plazo en el que las prejubilaciones y las jubilaciones son casi diarias. La digitalización nunca podrá sustituir al equipo humano y no debe ser en ningún caso un motivo más de sobrecarga laboral. Por ello, el proyecto de transformación digital debe servir para agilizar y mejorar la calidad del trabajo y de nuestras condiciones laborales.
+        </p>
+        <p>
+          La digitalización de ICEX debe ir acompañada de un proceso de formación y adaptación al cambio que estas nuevas tecnologías puedan implicar, así como de los recursos técnicos y materiales necesarios para facilitar el proceso; y siempre garantizando el derecho a la desconexión digital.        </p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -306,7 +317,10 @@
       <div class="modal-body px-4">
         <p>La carrera profesional está formada por el conjunto ordenado de mejoras profesionales y salariales (EBEP Cap. II, art. 16). <strong>Proponemos transparencia en todos los procesos de selección</strong>, ya sean traslados, ascensos, excedencias o nuevas incorporaciones.</p>
         <p>Revisión profunda de sistemas de promoción interna y elaboración de un código interno de buenas prácticas alineado con igualdad, mérito, capacidad y publicidad. <strong>Defendemos un proceso selectivo claro, transparente y justo</strong>.</p>
-        <p>Abogamos por una política de retención del talento.</p>
+        <p>
+          Propondremos la elaboración de un <strong>código interno de buenas prácticas en selección de personal</strong>alineado con los principios de igualdad, mérito, capacidad y publicidad. Y defenderemos el derecho de todos los aspirantes a <strong>un proceso selectivo claro, transparente y justo,</strong>que refuerce la confianza, y la cohesión de nuestra institución.
+        </p>       
+        <p>Abogamos por una política de <strong>retención del talento.</strong></p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -333,9 +347,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>La formación es un derecho del personal del ICEX. <strong>Proponemos un Plan de Formación accesible y adaptado a necesidades reales</strong>, que mejore el rendimiento y competitividad de ICEX.</p>
-        <p>Apostamos por cursos formativos de calidad, con valor añadido y utilidad práctica para el desempeño profesional.</p>
-        <p>Formación útil, accesible para todo el personal y de calidad.</p>
+        <p>La formación es un derecho del personal del ICEX. Nuestro compromiso con el desarrollo profesional pasa por proponer la creación de un <strong>Plan de Formación </strong>accesible y adaptado a las necesidades reales, que mejoren el rendimiento y la competitividad de ICEX. Nuestro objetivo es que cada persona tenga las mismas oportunidades de mejorar sus competencias, adquirir nuevos conocimientos y avanzar en su carrera, sin barreras ni exclusiones.</p>
+        <p>Apostamos por cursos formativos de calidad, con valor añadido para quienes los cursan y de utilidad para el desempeño de sus funciones. La formación ha de ser una herramienta eficaz para el crecimiento personal y profesional.</p>
+        <p>Solo una oferta de formación útil, accesible para todo el personal y de calidad podrá dar respuesta a los cambios que está experimentando ICEX.</p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -362,9 +376,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>Contamos con una normativa de viajes compleja y obsoleta, con tablas de dietas no adaptadas y procesos de gestión ineficientes que generan sobrecostes.</p>
-        <p>Abogamos por una normativa más racional que actualice condiciones, equilibre calidad y coste, y priorice criterios objetivos y ágiles. Apostamos también por la digitalización de procesos administrativos y revisión de liquidaciones basada en la confianza.</p>
-        <p>Los viajes no son un premio, sino parte del trabajo, y deben garantizar desempeño profesional seguro y de calidad. Es imprescindible actualizar importes de dietas y modernizar procedimientos.</p>
+        <p>Contamos con una normativa de viajes muy compleja y obsoleta, con tablas de dietas no adaptadas y procesos de gestión ineficientes que redunda en sobrecostes para ICEX no vinculados a un mejor servicio o calidad. Desde hace años, el servicio prestado por la agencia de viajes se ha ido deteriorando, tanto en el número de activos destinados a la gestión como a la carga de trabajo que recae sobre ellos, lo que implica peores condiciones de trabajo para el personal subcontratado y redunda en un servicio de peor calidad y menos personalizado.</p>
+        <p>Abogamos por una <strong>normativa de viajes más racional, </strong>que promueva la actualización de las condiciones de los trabajadores, que equilibre la relación entre calidad y coste del servicio, priorizando alternativas cuando la oferta de la agencia sea menos competitiva, basado en criterios objetivos y ágiles. 
+También apostamos por un proceso de revisión de las liquidaciones de viaje basado en la confianza.
+</p>
+        <p>Los viajes no son un premio, son parte de nuestro trabajo y por lo tanto deben darse las condiciones necesarias que garanticen el desempeño profesional en condiciones de seguridad y calidad necesarias.</p>
+        <p>Consideramos imprescindible la <strong>actualización</strong> de los importes de dietas por países, adaptándolos al escenario de la reciente subida de precios en casi todo el mundo. Y también la <strong>digitalización de los procesos administrativos </strong>que lleva consigo.</p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -383,6 +400,7 @@
 </body>
 
 </html>
+
 
 
 
