--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
   <section class="container my-5 py-5 bg-light">
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-7">
-        <h2>El poder de luchar por lo que vale la pena</h2>
-        <p>Luchar por lo que vale la pena significa no conformarse. Significa exigir condiciones justas, defender nuestros derechos, y trabajar por un entorno más humano, más equitativo y más solidario. Y ese poder está en tus manos.</p>
-        <p>Votar en estas elecciones es dar un paso hacia adelante. Es decir “yo también quiero ser parte del cambio”. Porque cuando luchamos juntos, lo que vale la pena se convierte en lo que conseguimos.
-        </p>
+        <h2>Condiciones laborales justas para todos</h2>
+        <p>Negociar por lo que vale la pena significa no conformarse. Significa exigir condiciones justas, defender nuestros derechos, y trabajar por un entorno más humano, más equitativo y más solidario. Y ese poder está en tus manos.</p>
+        <p>Votar en estas elecciones es dar un paso hacia adelante. Significa decir <strong>“yo también quiero ser parte del cambio”.</strong>Porque cuando nos sentamos a negociar todos juntos, lo que vale la pena se convierte en lo que conseguimos.</p>
       </div>
       <div class="col-md-5 text-center">
         <img src="img/punos.png" class="img-fluid rounded shadow" alt="Imagen">
@@ -106,15 +105,13 @@
 
   <section class="container my-5 py-5">
     <div class="row align-items-center">
+      <div class="col-md-7">        
+      </div>
       <div class="col-md-7">
         <h2>Construyamos juntos el futuro</h2>
         <h3>tu voto es la clave</h3>
-        <p>Vuestro voto nos dará fuerza y nos respaldará en todas las
-          negociaciones que llevemos a cabo. Os animamos a participar en las
-          próximas Elecciones Sindicales y apostar por la candidatura más
-        comprometida, la de CCOO.</p>
-      </div>
-      <div class="col-md-7">
+        <p>Es fundamental que el nuevo Comité de Empresa cuente con un apoyo mayoritario de la plantilla de ICEX para poder afrontar las negociaciones con la máxima solidez.</p>
+        <p><strong>¡Vota por la candidatura más comprometida: la de CCOO!</strong></p>
         <h2>El poder de unirnos para defender lo común</h2>
         <p>En el tiempo que corre, donde lo individual parece imponerse, unirnos es un acto de resistencia. Porque lo que compartimos —nuestros derechos, nuestras condiciones laborales, nuestra salud, nuestro tiempo— es lo que realmente nos sostiene como colectivo.</p>
         <p>Cuando nos organizamos, cuando votamos, cuando participamos, estamos diciendo que no estamos solos. Que creemos en el poder de la solidaridad, en el valor de cuidar lo que es de todos y todas. Porque lo común no se defiende desde el aislamiento, sino desde la unión.
@@ -190,6 +187,7 @@ document.addEventListener("DOMContentLoaded", function() {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
