--- a/quienes.html
+++ b/quienes.html
@@ -287,7 +287,7 @@
       <!-- CARD 19 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidato+19" class="card-img-top" alt="Pedro M. Flores Duque">
+          <img src="img/pedroFlores.jpg" class="card-img-top" alt="Pedro M. Flores Duque">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Pedro M. Flores Duque</h6>
             <p class="candidate-role"><strong>Candidato</strong></p>
@@ -319,6 +319,7 @@
 </body>
 
 </html>
+
 
 
 
