--- a/quienes.html
+++ b/quienes.html
@@ -210,7 +210,7 @@
       <!-- CARD 12 -->
       <div class="col">
         <div class="card candidate-card shadow-sm h-100">
-          <img src="https://dummyimage.com/400x400/222/fff&text=Candidata+12" class="card-img-top" alt="Tana Fernández-Delgado">
+          <img src="img/tana.jpg" class="card-img-top" alt="Tana Fernández-Delgado">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Tana Fernández-Delgado</h6>
             <p class="candidate-role"><strong>Candidata</strong></p>
@@ -319,6 +319,7 @@
 </body>
 
 </html>
+
 
 
 
